tests/pass/helloworld.tiger
let
in
	print("Hello, world!")
end
