tests/fail/semantic/return-type.tiger
let
      function f() : int = (
            "A"
      )
in
end
